# pybind-lib-wheel

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  shell.nix
.github/workflows/: build.yaml
src/: module.cpp  mylib.cpp  mylib.h
yourlib/: CMakeLists.txt  yourlib.cpp  yourlib.h  yourlibConfig.cmake.in
