[build-system]
requires = [
  "scikit-build-core>=0.3.3",
  "pybind11>=2.12",
  "setuptools-scm>=8.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.exclude = [
  "bin",
  "lib",
  "lib64",
  "share",
  "include",
]
# TOOD this leaks on windows.
#      I'd like to use `{root.path}/.cibw-cache/{wheel_tag}`
#      but repair-wheel-command only templates {wheel} and {dest_dir}.
# build-dir = "{root.path}/.cibw-cache/{wheel_tag}"
build-dir = "/build"

[project]
name = "mymod"
version = "9999.9" # supply chain attack lol

[tool.cibuildwheel.linux]
repair-wheel-command = "LD_LIBRARY_PATH=/build auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path /build/Release -w {dest_dir} {wheel}"
